# SimpleCppProjWithCmake

./: .gitignore  CMakeLists.txt  README.md  commonFunctions.cmake
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/explicitKeyWord/: CMakeLists.txt
src/explicitKeyWord/inc/: explicitKeyWord.h
src/explicitKeyWord/src/: explicitKeyWord.cpp
src/helloLib/: CMakeLists.txt
src/helloLib/inc/: helloWorld.h
src/helloLib/src/: helloWorld.cpp
test/: CMakeLists.txt
test/src/: explicitKeyWordTest.cpp  helloLibTest.cpp
